Added the correct link to the first lesson

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="main d-flex flex-grow-1">
             <div class="content">
                 <nav class="navbar navbar-light bg-light shadow-sm">
-                    <a class="navbar-brand" href="#">INTRODUCTION</a>
+                    <a class="navbar-brand text-uppercase" href="#">Introduction</a>
                 </nav>
                 <div class="container-fluid py-2">
                     <div class="shadow-lg p-5 mb-5 bg-white rounded">
@@ -47,10 +47,10 @@
             <aside class="sidebar p-4">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                      <a class="nav-link text-white active" href="#">Introduction</a>
+                      <a class="nav-link text-white active" href="/">Introduction</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-white" href="#">Jasmine Functions</a>
+                      <a class="nav-link text-white" href="/Lesson 01 - Jasmine Functions">Jasmine Functions</a>
                     </li>
                 </ul>
             </aside>
