Minor update to the main index html file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Nova+Mono|Roboto+Condensed">
 
-    <link rel="shortcut icon" type="image/png" href="assets/libs/jasmine/v3.6.0/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="assets/libs/jasmine/v3.6.0/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="assets/libs/jasmine/v3.6.0/lib/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="assets/libs/jasmine/v3.6.0/lib/jasmine.css">
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -62,9 +62,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/jasmine.js"></script>
-    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/jasmine-html.js"></script>
-    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/boot.js"></script>
+    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/lib/jasmine.js"></script>
+    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/lib/jasmine-html.js"></script>
+    <script type="text/javascript" src="assets/libs/jasmine/v3.6.0/lib/boot.js"></script>
     <script type="text/javascript">
         it('should have the correct title', () => {
             expect(document.title).toBe('Introduction');
