Added links to all lessons

--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
                     <li class="nav-item">
                       <a class="nav-link text-white" href="/Lesson 01 - Jasmine Functions">Jasmine Functions</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/Lesson 02 - Matchers">Matchers</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/Lesson 03 - Organizing Specs">Organizing Specs</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/Lesson 04 - Spying">Spying on Your Code</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/Lesson 05 - Asynchronous">Testing Asynchronous Code</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-white" href="/Lesson 06 - Reports">Test Reports & Continuous Integration</a>
+                    </li>
                 </ul>
             </aside>
         </div>
