--- a/Lesson 01 - Jasmine Functions/index.html
+++ b/Lesson 01 - Jasmine Functions/index.html
@@ -72,10 +72,25 @@
             <aside class="sidebar p-4">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                      <a class="nav-link text-white" href="/">Introduction</a>
+                        <a class="nav-link text-white" href="/">Introduction</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-white active" href="/Lesson 01 - Jasmine Functions">Jasmine Functions</a>
+                        <a class="nav-link text-white active" href="/Lesson 01 - Jasmine Functions">Jasmine Functions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/Lesson 02 - Matchers">Matchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/Lesson 03 - Organizing Specs">Organizing Specs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/Lesson 04 - Spying">Spying on Your Code</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/Lesson 05 - Asynchronous">Testing Asynchronous Code</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/Lesson 06 - Reports">Test Reports & Continuous Integration</a>
                     </li>
                 </ul>
             </aside>
