Minor update to lesson 05

--- a/Lesson 05 - Asynchronous/index.html
+++ b/Lesson 05 - Asynchronous/index.html
@@ -112,10 +112,10 @@
                         <a class="nav-link text-white" href="/Lesson 03 - Organizing Specs">Organizing Specs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white active" href="/Lesson 04 - Spying">Spying on Your Code</a>
+                        <a class="nav-link text-white" href="/Lesson 04 - Spying">Spying on Your Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/Lesson 05 - Asynchronous">Testing Asynchronous Code</a>
+                        <a class="nav-link text-white active" href="/Lesson 05 - Asynchronous">Testing Asynchronous Code</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/Lesson 06 - Reports">Test Reports & Continuous Integration</a>
